[gd_scene load_steps=2 format=2]

[ext_resource path="res://spawner/Spawner.gd" type="Script" id=1]

[node name="Spawner" type="Position2D"]
script = ExtResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
editor/display_folded = true
scale = Vector2( 3.02704, 3.02704 )
rect = Rect2( -150, -150, 300, 300 )
process_parent = true
physics_process_parent = true

[node name="SpawnTimer" type="Timer" parent="."]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_screen_entered" flags=6]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn"]
